renderer: fix background color flicker when window was created

--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -19,6 +19,7 @@ body {
     font-family: Roboto, 'Noto Sans', 'Segoe UI', 'Noto Sans CJK SC',
         'Source Han Sans CN', 'WenQuanYi Micro Hei', 'WenQuanYi Zen Hei',
         'Droid Sans Fallback', 'Microsoft Yahei', sans-serif;
+    background: unset !important;
 }
 
 .mono-font {
